# ai-blog-copilot

./: .env.example  .gitattributes  .gitignore  README.md  feeds.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  daily-radar.yml
data/: topics.json
src/llm/: base.py  calls_log.py  client.py  config.py  providers.py
src/radar/: agent.py  errors.py  net.py  prompts.py  registry.py  run.py  sanitize.py  schema.py  store.py
src/radar/tools/: article.py  base.py  hackernews.py  reddit.py  rss.py
src/studio/: __init__.py  app.py  costs_data.py  drafting.py  export.py  radar_data.py
src/studio/views/: __init__.py  costs.py  radar.py  studio.py
tests/: fakes.py  test_agent.py  test_calls_log.py  test_calls_summary.py  test_client.py  test_config.py  test_costs_view.py  test_drafting.py  test_export.py  test_net.py  test_providers.py  test_radar_view.py  test_rate_limits.py  test_reddit_auth.py  test_reddit_token_from_env.py  test_registry.py  test_run_cli.py  test_sanitize.py  test_store.py  test_studio_view.py  test_tools_content.py  test_tools_hackernews.py  test_tools_social.py  test_topic_schema.py
tests/apps/: studio_probe.py
